# fractional

./: .gitignore  CMakeLists.txt
include/: Fraction.cpp  fractional.hpp  fractional.hxx  overflowchecker.hpp  overflowchecker.hxx  utility.hpp
tests/: test_file.cpp
